--- a/Rails/application/app/views/layouts/application(helper).html.erb
+++ b/Rails/application/app/views/layouts/application(helper).html.erb
@@ -7,12 +7,12 @@
 
     <!--                      Хэлпер для названия вкладки с названием страницы -->
 
-    <!-- Вставляем в <title> значение возвращаемое хэлпером, с названием и сайта и конкретной страницы -->
+    <!-- Вставляем в <title> значение возвращаемое хэлпером, с названием и сайта и конкретной страницы: -->
     <title><%= full_title( yield(:page_title) ) %></title>
-    <!-- full_title - оператор нашего хэлпера -->
+    <!-- full_title         - оператор нашего хэлпера -->
     <!-- yield(:page_title) - дополнительный, не главный yield, с условием(content_for) который принимает только из provide с тем же параметром -->
-    <!-- :page_title - content_for/название(можно любое) для конкретного yield -->
-    <!-- Теперь из вида(например questions/index.html.erb), что подставлен в данный момент уже в главный yield из provide :page_title передастся в этот yield значение, определив его по имени :page_title и далее значение отправляется в хэлпер, обрабатывается и подставляется в название вкладки(тут 'Questions | AskIt') -->
+    <!-- :page_title        - content_for/название(можно любое) для конкретного yield -->
+    <!-- Теперь из вида, например questions/index.html.erb, что подставлен в данный момент уже в главный yield, из provide :page_title передастся в этот yield значение, определив его по имени :page_title и далее значение отправляется в хэлпер, обрабатывается и подставляется в название вкладки(тут 'Questions | AskIt') -->
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
