--- a/Rails/application/app/views/questions/index.html.erb
+++ b/Rails/application/app/views/questions/index.html.erb
@@ -8,7 +8,7 @@
 
 <!--                      Кастомные хэлперы для динамического меню, переданного через yield -->
 
-<!-- Вызываем наш хэлпер, рендерищий меню и передающий имя страницы -->
+<!-- Вызываем наш хэлпер, который рендерит меню и передает имя страницы -->
 <!-- Придется его подключить на каждой странице, а иначе меню не будет отображаться, тк рендерится оно именно в хэлпере, а в yield :main_menu только передается. -->
 <% currently_at 'Questions' %>
 <!-- 'Questions' - передаем параметром хэлпера название нашей страницы, которое должно быть идентично названию в ссылках с которых на эту страницу осуществляется переход -->
