--- a/Rails/application/app/views/questions/_question.html.erb
+++ b/Rails/application/app/views/questions/_question.html.erb
@@ -24,7 +24,7 @@
       data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
 
 
-    <!-- Скроем кнопки редактирования и удаления пользователям которым не разрешены эти функции (UsersRoles) -->
+    <!-- Скроем кнопки редактирования и удаления пользователям, которым не разрешены эти функции (UsersRoles) -->
     <% if policy(question).edit? %>
       <%= link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
     <% end %>
