--- a/Rails/application/app/views/questions/show.html.erb
+++ b/Rails/application/app/views/questions/show.html.erb
@@ -72,7 +72,7 @@
 
 <!-- Вариант 2: можно вынести в отдельный паршал формы - answers/_form.html.erb, причем поместить туда и фому и паршал ошибок. Что удобно тк эту форму вместе с паршалом ошибок можно использовать и в answers/edit.html.erb -->
 <%= render 'answers/form' %>
-<!-- И просто рендерим паршал формы из другой директории сюда используя путь с директорией, тк тут директория questions -->
+<!-- И просто рендерим паршал формы из другой директории сюда, используя путь с директорией, тк тут директория questions -->
 
 
 
