--- a/Rails/application/app/views/answers/_answer.html.erb
+++ b/Rails/application/app/views/answers/_answer.html.erb
@@ -69,7 +69,7 @@
 <!-- Рендерим паршал формы комментариев (Polym_assoc) -->
 <%= render 'comments/commentable', commentable: answer, comment: @comment, html_id: dom_id(answer, 'comment_form') %>
 <!-- comment: @comment - передаем комментарий в локальную переменную паршала comment, его тут нет и он не планируется, но если созданный в данной форме коммент не пройдет валидацию, то этот коммент уже будет объявлен и нужен для сообщения об ошибке. Созданные же ранее комменты рендарятся от коллекции комментируемого в паршале _commentable.html.erb -->
-<!-- html_id: dom_id(answer, 'comment_form') - передаем значение якоря для открытия комментов этого ответа, те будет уникалоьный для каждого ответа, при помощи dom_id, имя якоря будет состоять из 'comment_form' и айди этого answer, например #comment_form_answer_20 -->
+<!-- html_id: dom_id(answer, 'comment_form') - передаем значение якоря для открытия коллапс элемента с формой комментов для этого ответа (тк коллапс элементы будут для каждого ответа и каждый открывается по своей кнопке по своему айди, соответсвенно их нужно все отрендерить уникальными), те будет уникалоьный для каждого ответа, при помощи dom_id, имя якоря будет состоять из 'comment_form' и айди этого answer, например #comment_form_answer_20 -->
 
 
 
