--- a/Rails/application/app/views/tags/_tag.html.erb
+++ b/Rails/application/app/views/tags/_tag.html.erb
@@ -1,4 +1,4 @@
-<!-- Тег из коллекци тегов(рендерятся в _question.html.erb) принадлежащих вопросу обернутый в ссылку для выбора всех вопросов имеющих этот тег -->
+<!-- Тег из коллекци тегов(рендерятся в _question.html.erb от коллекции всех тегов, что есть у конкретного вопроса) принадлежащих вопросу, обернутый в ссылку для выбора всех вопросов имеющих этот тег -->
 <%= link_to questions_path(tag_ids: tag), class: 'badge rounded-pill bg-light text-dark d-inline-block px-2 pt-1 pb-2 me-1' do %>
   <small><%= tag.title %></small>
 <% end %>
