--- a/Rails/application/app/views/questions/index.html.erb
+++ b/Rails/application/app/views/questions/index.html.erb
@@ -86,21 +86,22 @@
 
 <h1 class="mb-4"><%= t('.title') %></h1>
 
-<!--                  (ManyToMany) Форма для выбора отображения вопросов по тегам  -->
+<!--                    (TomSelect) Форма для выбора отображения вопросов по тегам  -->
 <%= form_with url: questions_path, method: :get do |f| %>
-  <!-- url: questions_path  - тоесть на эту же страницу (будем отправлять форму в index) -->
+  <!-- url: questions_path  - тоесть тоесть в конце, кода пользователь выберет теги и нажмет кнопку отправить, будет отправлять форму в questions#index (и потом новые данные вернутся на эту же страницу) -->
   <!-- method: :get - тоесть передаем методом GET -->
+  
   <%= f.collection_select :tag_ids, (@tags || []), :id, :title, {selected: params[:tag_ids]},
     multiple: true, required: true, class: 'js-multiple-select', data: {'ajax-url': '/api/tags'} %>
-    <!-- :tag_ids имя селесктора -->
-    <!-- (@tags || []) либо коллекция тегов переданная из index либо пустая коллекция -->
-    <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
-    <!-- :title - заголовки тегов те их имена (метод модели) -->
-    <!-- {selected: params[:tag_ids]} - те когда эта форма будет отправлена и вернется страница то в селекторе уже будут выбраны все те варианты что мы собствено выбрали до отправки формы -->
+    <!-- :tag_ids      - имя селесктора для params -->
+    <!-- (@tags || []) - либо коллекция тегов переданная из index либо пустая коллекция -->
+    <!-- :id           - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
+    <!-- :title        - заголовки тегов те их имена (метод модели) -->
+    <!-- {selected: params[:tag_ids]} - те когда эта форма будет отправлена и вернется страница, то в селекторе уже будут выбраны все те варианты, что мы собствено выбрали до отправки формы -->
     <!-- required: true - валидация запрещает отправку пустой формы -->
     <!-- data: {'ajax-url': '/api/tags'} - опции ассинхронного поиска где:
-      'ajax-url' - это опция для указания URL
-      '/api/tags' - это URL к которому обращается ассинхронный запрос, когда пользователь вводит символы в поле селектора
+      'ajax-url'  - опция для указания URL
+      '/api/tags' - URL к которому обращается ассинхронный запрос js-скрипта, когда пользователь вводит символы в поле селектора
     -->
 
   <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
