--- a/Rails/application/Rails_6_7/app/views/articles/index.html.erb
+++ b/Rails/application/Rails_6_7/app/views/articles/index.html.erb
@@ -33,8 +33,7 @@
 
     <!-- Ссылка выглядит так(не добавляет форму (?? в Рэилс 7 ??)): -->
       <a data-confirm="Действительно удалить?" rel="nofollow" data-method="delete" href="/articles/1">Destroy article</a>
-      <!-- data-method="delete" - кастомный атрибут Рэилс
-        data-some_name атрибуты нужны для того чтобы мы могли создать собственные атрибуты(some_name - на выбор). html-валидатор будет знать что это кастомный атрибут, браузер их не обрабатыает
+      <!-- data-method="delete" - кастомный data-атрибут Рэилс
         Файл turbolinks через скрипт обрабатывает атрибуты data-* встречающиеся в коде html
         Работа атрибута data-method="delete":
           1. скрипт сканирует страницу и ищет атрибут data-method="delete"
