--- a/Rails/application/Rails_6_7/app/views/articles/new.html.erb
+++ b/Rails/application/Rails_6_7/app/views/articles/new.html.erb
@@ -7,7 +7,7 @@
 <%= form_for :article, url: articles_path, data: { turbo: false } do |f| %> <!-- Тут именно с %= -->
   <!-- form_for - стандартный форм билдер(хэлпер), создает форму, используется не так часто тк есть другие форм билдеры -->
   <!-- :article - параметр(? для генерации значения атрибута name ?) в единственном числе, тк форма отправляет данные об одной сущности -->
-    <!-- В итоге будет создана такая форма со скрытым полем в ней, которое сгенерено Рэилс, оно содежит специальный зашифрованный токен и когда от этой формы приходит зпрос, то Рэилс проверяет что этот тот же самый токен (нужно для безопасности приложения): -->
+    <!-- В итоге будет создана такая форма со скрытым полем в ней, которое сгенерено Рэилс, оно содежит специальный зашифрованный токен и когда от этой формы приходит запрос, то Рэилс проверяет, что этот тот же самый токен, что и был создан при рендере формы (нужно для безопасности приложения). Возможно в новых версиях Рэилс эта защита будет убрана, тк браузеры сами теперь делают что-то похожее -->
     <form action="/articles/new" accept-charset="UTF-8" method="post">
       <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhYRgsnOmkAZGbJQ" autocomplete="off" />
       <!--  ... Другие поля формы ... -->
