--- a/Rails/application/Rails_6_7/app/assets/srtylesheets/application.css
+++ b/Rails/application/Rails_6_7/app/assets/srtylesheets/application.css
@@ -5,3 +5,36 @@
 .field_with_errors textarea {
   border: 3px solid red;
 }
+
+
+/*                                         Sprockets Assets Pipeline */
+
+/* В этот фаил, тк он вызван через stylesheet_link_tag и имеет расширение просто ".css" можно подключить другие фаилы, чтобы не подключать их все в лэйаут при помощи специального синтаксиса: */
+
+/* 1. Найти и подключить фаил button.css (или button.scss) в одной из папок: app/assets/stylesheets/, lib/assets/stylesheets/, vendor/assets/stylesheets/ */
+*= require button
+
+/* 2. Найти папку app/assets/stylesheets/modules/ и подключить все css-фаилы из нее, включая подпапки */
+*= require_tree ./modules
+
+/* 3. Подключить все css-фаилы, включая подпапки из app/assets/stylesheets/. Фаилы подключаются в алфавитном порядке */
+*= require_tree .
+
+/* 4. Подключить все стили из этого фаила */
+*= require_self
+
+
+/* https://www.youtube.com/watch?v=Ex356PMFXdY  - примеры написания стилей для простого Рэил приложения */
+/* Подключаем, например при помои "*= require_tree ." и делаем много фаилов со стилями по разным критериям, например отдельный для шрифтов, отдельный для кнопок, отдельный для общих стидей типа обнуления всех стилей по умолчанию, отдельный для отступов, отдельный для форм итд */
+
+
+
+
+
+
+
+
+
+
+
+/*  */
