--- a/Rails/application/Rails_6_7/app/assets/srtylesheets/application.css
+++ b/Rails/application/Rails_6_7/app/assets/srtylesheets/application.css
@@ -27,6 +27,9 @@
 /* https://www.youtube.com/watch?v=Ex356PMFXdY  - примеры написания стилей для простого Рэил приложения */
 /* Подключаем, например при помои "*= require_tree ." и делаем много фаилов со стилями по разным критериям, например отдельный для шрифтов, отдельный для кнопок, отдельный для общих стидей типа обнуления всех стилей по умолчанию, отдельный для отступов, отдельный для форм итд */
 
+/* 5. Подключить стили Font Awesome через гем "font-awesome-rails", тоесть из фаила гема app/assets/stylesheets/font-awesome.css.erb */
+*= require font-awesome
+
 
 
 
