--- a/Rails/application/Rails_6_7/app/views/contacts/new.html.erb
+++ b/Rails/application/Rails_6_7/app/views/contacts/new.html.erb
@@ -22,8 +22,8 @@
 
 	<!-- Вывод списка ошибок Вариант 3: с использованием паршала -->
 	<%= render 'shared/errors', object: @contact %>
-	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности @contact -->
-	<!-- object: @contact - передаем значение сущности в локальную переменную object, которую используем в паршале, чтоб применить его к конкретной сущности, что нам нужна -->
+	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности @contact иначе было бы достаточно только названия -->
+	<!-- object: @contact - передаем значение сущности в локальную переменную object, сущьность из которой будем использовать в паршале, чтобы использовать предназначенный для нескольких типов сущностей паршал с любой из них -->
 
 	<p>
 	  <%= f.label :email %>
