--- a/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
+++ b/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
@@ -9,11 +9,14 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <!-- иконка -->
+    <!-- хелпер иконки -->
     <%= favicon_link_tag 'favicon.png' %>
 
     <!-- стили из application.css или application.scss, (?Если исользуется Sprockets Assets Pipeline то эти фаилы называются манифестами тк можно в них подключить другие css-фаилы?) -->
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+
+    <!-- так же можно подключать стили из гемов -->
+    <!-- подключим стили Font Awesome -->
   </head>
 
   <body>
@@ -88,24 +91,31 @@
 
 
 
-    <!--                                    Кастомные флэш-сообщения -->
+    <!--                                         Флэш-сообщения -->
 
-    <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили) -->
+    <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили), тк теперь после редиректа будет доступен объект flash со всеми значениями присвоенными по ключам в контроллере -->
+    <!-- 0. Посмотреть объект флэша -->
+    <%= flash.inspect %>
+    <!-- 1. Для сообщения по конкретному ключу -->
+    <%= flash[:nitice] %>
+    <!-- 2. Для универсального сообщения по разным ключам можно написать чтото типа этого -->
+    <% flash.each do |k, v| %>
+      <!-- flash - это хранилище похожее на хэш но не являющееся хэшэм ? -->
+      <!-- k - тут передает :success; v - передает "Question created!" -->
+
+      <!-- Вариант 1: синтаксис html -->
+      <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение класса, те получаем класс бутстрапа alert-success -->
+        <%= v %> <!-- передаем значение, например "Question created!" -->
+      </div>
+
+      <!-- Вариант 2: синтаксис Рэилс с хэлпером tag (эта конструкция аналог для той что выше) -->
+      <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
+
+    <% end %>
+
+
+
     <main class="container mt-3">
-      <% flash.each do |k, v| %>
-        <!-- flash - это хранилище похожее на хэш но не являющееся хэшэм ? -->
-        <!-- k - тут передает :success; v - передает "Question created!" -->
-
-        <!-- Вариант 1: синтаксис html -->
-        <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение класса, те получаем класс бутстрапа alert-success -->
-          <%= v %> <!-- передаем значение, например "Question created!" -->
-        </div>
-
-        <!-- Вариант 2: синтаксис Рэилс с хэлпером tag (эта конструкция аналог для той что выше) -->
-        <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
-
-      <% end %>
-
       <%= yield %>
     </main>
 
