--- a/Rails/application/Rails_6_7/app/views/users/_form.html.erb
+++ b/Rails/application/Rails_6_7/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', object: @user %>
 
-<!-- Фрма рендерится либо в users/new.html.erb либо в users/edit.html.erb -->
+<!-- Форма рендерится либо в users/new.html.erb либо в users/edit.html.erb -->
 <%= form_with model: @user do |f| %>
   <div>
     <%= f.label :email %>
