--- a/Rails/application/Rails_6_7/app/views/articles/new.html.erb
+++ b/Rails/application/Rails_6_7/app/views/articles/new.html.erb
@@ -16,7 +16,7 @@
     <form action="/articles" accept-charset="UTF-8" method="post">
       <!--  ... Поля формы ... -->
     </form>
-  <!-- data: { turbo:false } - зададим дополнительный дата-аттрибут, только в том случае если в приложении используется Turbo, иначе форма не отправится/обработается корректно. В теге формы появится новый атрибут -->
+  <!-- data: { turbo:false } - зададим дополнительный дата-аттрибут, только в том случае если в приложении используется Turbo, иначе форма не отправится/обработается корректно. В теге формы появится новый атрибут. В Рэилс 7 с Турбо форма отправляется не браузером по нажатию кнопки, а в момент нажатия перехватывается turbo.js и потом отправляется им уже как XHR-запрос (XMLHttpRequest) -->
     <form data-turbo="false" action="/articles" accept-charset="UTF-8" method="post">
       <!--  ... Поля формы ... -->
     </form>
