--- a/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
+++ b/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
@@ -116,6 +116,7 @@
 
 
     <main class="container mt-3">
+      <!-- Указывает Рельсам, что тут нужно рендерить шаблоны -->
       <%= yield %>
     </main>
 
