--- a/Rails/application/Rails_6_7/app/assets/stylesheets/application.css
+++ b/Rails/application/Rails_6_7/app/assets/stylesheets/application.css
@@ -9,26 +9,37 @@
 
 /*                                         Sprockets Assets Pipeline */
 
-/* В этот фаил, тк он вызван через stylesheet_link_tag и имеет расширение просто ".css" можно подключить другие фаилы, чтобы не подключать их все в лэйаут при помощи специального синтаксиса: */
+/* В этот фаил, тк он вызван через stylesheet_link_tag и имеет расширение просто ".css" можно подключить другие фаилы, чтобы не подключать их все в лэйаут при помощи специального синтаксиса, который прописывается в закомментированных строках, и потом все подключенныые фаил будут склеены в 1 css-фаил в порядке подключения и подключен в лэйаут: */
 
-/* 1. Найти и подключить фаил button.css (или button.scss) в одной из папок: app/assets/stylesheets/, lib/assets/stylesheets/, vendor/assets/stylesheets/ */
+/* 1. Найти и подключить отдельные фаилы, например button.css (или button.scss) из одной из папок: app/assets/stylesheets/, lib/assets/stylesheets/, vendor/assets/stylesheets/ */
+/*
 *= require button
+*= require greed
+*= require header
+*/
 
 /* 2. Найти папку app/assets/stylesheets/modules/ и подключить все css-фаилы из нее, включая подпапки */
+/*
 *= require_tree ./modules
+*/
 
-/* 3. Подключить все css-фаилы, включая подпапки из app/assets/stylesheets/. Фаилы подключаются в алфавитном порядке */
+/* 3. Подключить все css-фаилы, включая подпапки из app/assets/stylesheets/. Фаилы подключаются в алфавитном порядке, что не всегда удобно и чаще используется способ 1 с подключением множества отдельных фаилов */
+/*
 *= require_tree .
+*/
 
 /* 4. Подключить все стили из этого фаила */
+/*
 *= require_self
-
+*/
 
 /* https://www.youtube.com/watch?v=Ex356PMFXdY  - примеры написания стилей для простого Рэил приложения */
 /* Подключаем, например при помои "*= require_tree ." и делаем много фаилов со стилями по разным критериям, например отдельный для шрифтов, отдельный для кнопок, отдельный для общих стидей типа обнуления всех стилей по умолчанию, отдельный для отступов, отдельный для форм итд */
 
 /* 5. Подключить стили Font Awesome через гем "font-awesome-rails", тоесть из фаила гема app/assets/stylesheets/font-awesome.css.erb */
+/*
 *= require font-awesome
+*/
 
 
 
