--- a/Rails/application/Rails_6_7/app/assets/stylesheets/application.css
+++ b/Rails/application/Rails_6_7/app/assets/stylesheets/application.css
@@ -11,6 +11,15 @@
 
 /* В этот фаил, тк он вызван через stylesheet_link_tag и имеет расширение просто ".css" можно подключить другие фаилы, чтобы не подключать их все в лэйаут при помощи специального синтаксиса, который прописывается в закомментированных строках, и потом все подключенныые фаил будут склеены в 1 css-фаил в порядке подключения и подключен в лэйаут: */
 
+/*
+В старых версиях Рэилс +- тоже само будет и в assets/js/application.js, например:
+
+//= require jquery
+//= require jquery_ujs
+//= require_tree .
+
+*/
+
 /* 1. Найти и подключить отдельные фаилы, например button.css (или button.scss) из одной из папок: app/assets/stylesheets/, lib/assets/stylesheets/, vendor/assets/stylesheets/ */
 /*
 *= require button
