--- a/Rails/application/Rails_6_7/app/views/articles/new.html.erb
+++ b/Rails/application/Rails_6_7/app/views/articles/new.html.erb
@@ -4,7 +4,10 @@
 
 <!-- Форм билдеры Рэилс для формы не обязательны и возможно использовать HTML-теги форм и полей напрямую -->
 
+<!-- 1. form_for :article, url:  (не нужна пустая сущьность) -->
 <%= form_for :article, url: articles_path, data: { turbo: false } do |f| %> <!-- Тут именно с %= -->
+  <!-- f - в переменную блока передается объект формбилдер -->
+
   <!-- form_for - стандартный форм билдер(хэлпер), создает форму, используется не так часто тк есть другие форм билдеры -->
   <!-- :article - параметр(? для генерации значения атрибута name ?) в единственном числе, тк форма отправляет данные об одной сущности -->
     <!-- В итоге будет создана такая форма со скрытым полем в ней, которое сгенерено Рэилс, оно содежит специальный зашифрованный токен и когда от этой формы приходит запрос, то Рэилс проверяет, что этот тот же самый токен, что и был создан при рендере формы (нужно для безопасности приложения). Возможно в новых версиях Рэилс эта защита будет убрана, тк браузеры сами теперь делают что-то похожее -->
@@ -67,6 +70,15 @@
 
 <% end %>
 
+
+
+<!-- 2. form_for @entity (нужна пустая сущьность) -->
+<%= form_for @article, url: articles_path, data: { turbo: false } do |f| %>
+  <!-- ... -->
+
+  <!-- submit_tag - ? устаревший вариант ? -->
+  <%= f.submit_tag 'Send message' %>
+<% end %>
 
 
 
