--- a/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
+++ b/Rails/application/Rails_6_7/app/views/layouts/application.html.erb
@@ -97,22 +97,22 @@
     <!-- 0. Посмотреть объект флэша -->
     <%= flash.inspect %>
     <!-- 1. Для сообщения по конкретному ключу -->
-    <%= flash[:nitice] %>
+    <%= flash[:notice] %>
     <!-- 2. Для универсального сообщения по разным ключам можно написать чтото типа этого -->
-    <% flash.each do |k, v| %>
-      <!-- flash - это хранилище похожее на хэш но не являющееся хэшэм ? -->
-      <!-- k - тут передает :success; v - передает "Question created!" -->
+    <% if flash.any? %>
+      <% flash.each do |k, v| %> <!-- flash - это хранилище похожее на хэш -->
+        <!-- k - тут передает :success; v - передает "Question created!" -->
 
-      <!-- Вариант 1: синтаксис html -->
-      <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение класса, те получаем класс бутстрапа alert-success -->
-        <%= v %> <!-- передаем значение, например "Question created!" -->
-      </div>
+        <!-- Вариант 1: синтаксис html -->
+        <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение класса, те получаем класс бутстрапа alert-success -->
+          <%= v %> <!-- передаем значение, например "Question created!" -->
+        </div>
 
-      <!-- Вариант 2: синтаксис Рэилс с хэлпером tag (эта конструкция аналог для той что выше) -->
-      <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
+        <!-- Вариант 2: синтаксис Рэилс с хэлпером tag (эта конструкция аналог для той что выше) -->
+        <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
 
+      <% end %>
     <% end %>
-
 
 
     <main class="container mt-3">
