--- a/Rails/application/Rails_6_7/app/views/admin/users/index.html.erb
+++ b/Rails/application/Rails_6_7/app/views/admin/users/index.html.erb
@@ -11,14 +11,12 @@
 <!-- data: {confirm: t('global.dialog.you_sure')} - подтверждение нажатия кнопки -->
 
 
-<!-- Форма для загрузки фаила(zip архива) -->
-<h2 class="mb-3">Upload users from XLSX</h2>
+<!-- Форма для загрузки фаила(zip архива с XLSX) -->
 <%= form_with url: admin_users_path do |f| %> <!-- POST 'admin/users' те экшен admin/users#create -->
-  <div>
-    <%= f.label :archive, 'Select archive' %>
-    <%= f.file_field :archive, class: 'form-control' %>
-    <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
-  </div>
+  <%= f.label :archive, 'Select archive' %>
+  <%= f.file_field :archive, class: 'form-control' %>
+  <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
+  
   <%= f.submit 'Upload!', class: 'btn btn-primary' %>
 <% end %>
 
