--- a/Rails/application/Rails_6_7/app/views/admin/users/index.html.erb
+++ b/Rails/application/Rails_6_7/app/views/admin/users/index.html.erb
@@ -43,7 +43,7 @@
   <thead>
     <tr>
       <th>#</th>
-      <th><%= t 'name', scope: scope %></th> <!-- scope: scope - берем переменную и добавляем к ней '.name' -->
+      <th><%= t 'name', scope: scope %></th> <!-- scope: scope - берем переменную scope и добавляем к ней '.name' -->
       <th><%= t 'email', scope: scope %></th>
       <th><%= t 'role', scope: scope %></th> <!-- название колонки для роли -->
       <th><%= t 'created_at', scope: scope %></th>
